# event-vision-library

./: .cookiecutter.json  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  test_e2vid.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
artifacts/sample_data/: event.hdf5  event.txt
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
docs/_templates/: custom-module-template.rst
examples/: convert_evk3_to_hdf5.py  convert_text_to_hdf5.py  reconstruction_e2vid.py  visualize_2d.py
src/evlib/: __init__.py  __main__.py  _version.py  constant.py  version.py
src/evlib/codec/: __init__.py  block_access.py  iterator_access.py
src/evlib/codec/fileformat/: __init__.py  _aedat4.py  _iterator_access.py  aedat.py  bin.py  conversion.py  evk.py  hdf5.py  text.py
src/evlib/dataloaders/: __init__.py  _base.py  _dsec.py  _dsec_rosbag.py  _event_cache.py  _mvsec.py  _mvsec_storage.py  _mvsec_types.py  _storage_common.py  utils.py
src/evlib/datasets/: __init__.py  _base.py  mvsec.py
src/evlib/preproc/: __init__.py  hot_pixel.py
src/evlib/processing/: __init__.py
src/evlib/processing/reconstruction/: __init__.py  e2vid.py
src/evlib/processing/reconstruction/e2vid/: e2vid.py  image_reconstructor.py
src/evlib/processing/reconstruction/e2vid/model/: model.py  submodules.py  unet.py
src/evlib/processing/reconstruction/e2vid/options/: inference_options.py
src/evlib/processing/reconstruction/e2vid/utils/: inference_utils.py  loading_utils.py  timers.py
src/evlib/processing/reconstruction/e2vid_module/: base_model.py  image_reconstructor.py  inference_options.py
src/evlib/processing/reconstruction/e2vid_module/model/: model.py  submodules.py  unet.py
src/evlib/processing/reconstruction/e2vid_module/options/: inference_options.py
src/evlib/processing/reconstruction/e2vid_module/utils/: inference_utils.py  loading_utils.py
src/evlib/representation/: __init__.py  histogram.py  time_map.py  voxel_grid.py
src/evlib/types/: __init__.py  raw_event.py  raw_events.py
src/evlib/utils/: basics.py
src/evlib/vis/: utils.py  view2d.py
tests/: __init__.py  test_main.py
tests/codec/: test_conversion.py
tests/codec/fileformat/: test_aedat.py  test_bin.py  test_conversion.py  test_text.py
tests/dataloaders/: __init__.py  test_base.py  test_dsec.py  test_mvsec.py  test_mvsec_storage.py  test_mvsec_types.py
tests/datasets/: __init__.py  test_base.py  test_mvsec.py
tests/preproc/: test_hot_pixel.py
tests/processing/: test_get_device.py
tests/processing/reconstruction/: test_e2vid.py
tests/representation/: test_histogram.py  test_time_map.py  test_voxel_grid.py
tests/test_utils/: misc.py
tests/types/: test_raw_event.py  test_raw_events.py
tests/utils/: test_basics.py
tests/vis/: test_utils.py  test_view2d.py
